--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "build": "rollup -c",
-        "watch": "rollup -c -w"
+        "watch": "rollup -c -w",
+        "package": "pnpm run build && node scripts/package.js"
     },
     "repository": {
         "type": "git",
@@ -29,9 +30,11 @@
         "@decky/rollup": "^1.0.2",
         "@decky/ui": "^4.11.0",
         "@rollup/rollup-linux-x64-musl": "^4.53.3",
+        "@types/archiver": "^7.0.0",
         "@types/react": "19.1.1",
         "@types/react-dom": "19.1.1",
         "@types/webpack": "^5.28.5",
+        "archiver": "^7.0.1",
         "rollup": "^4.53.3",
         "typescript": "^5.6.2"
     },
