--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "build": "rollup -c",
         "watch": "rollup -c -w",
-        "package": "pnpm run build && node scripts/package.js"
+        "package": "pnpm run build && node scripts/package.js",
+        "crop-screenshots": "node scripts/crop-screenshots.js"
     },
     "repository": {
         "type": "git",
@@ -36,6 +37,7 @@
         "@types/webpack": "^5.28.5",
         "archiver": "^7.0.1",
         "rollup": "^4.53.3",
+        "sharp": "^0.34.5",
         "typescript": "^5.6.2"
     },
     "dependencies": {
