--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "xone-decky-plugin",
     "version": "0.0.0",
-    "description": "Decky Loader plugin to install Xbox wireless controller drivers (xone & xpad-noone) on Steam Deck",
+    "description": "Decky Loader plugin to manage xone and xpad-noone drivers on Steam Deck",
     "type": "module",
     "scripts": {
         "build": "rollup -c",
