--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "rollup -c",
         "watch": "rollup -c -w",
         "package": "pnpm run build && node scripts/package.js",
-        "crop-screenshots": "node scripts/crop-screenshots.js"
+        "crop-screenshots": "node scripts/crop-screenshots.js",
+        "postversion": "node scripts/sync-version.js"
     },
     "repository": {
         "type": "git",
