fix: include plugin.json in version commit by using 'version' hook

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "watch": "rollup -c -w",
         "package": "pnpm run build && node scripts/package.js",
         "crop-screenshots": "node scripts/crop-screenshots.js",
-        "postversion": "node scripts/sync-version.js"
+        "version": "node scripts/sync-version.js"
     },
     "repository": {
         "type": "git",
