ci: add standard

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,16 @@
-# Shell scripts
+root = true
+
+[*]
+indent_style = space
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+end_of_line = lf
+
+[*.py]
+indent_size = 4
+
 [*.sh]
 max_line_length = 79
 keep_padding = true             # shfmt: -kp
