--- a/package.json
+++ b/package.json
@@ -1,57 +1,73 @@
 {
-    "name": "xone-decky-plugin",
-    "version": "0.1.0",
-    "description": "Decky Loader plugin to manage xone and xpad-noone drivers on Steam Deck",
-    "type": "module",
-    "scripts": {
-        "build": "rollup -c",
-        "watch": "rollup -c -w",
-        "package": "pnpm run build && node scripts/package.js",
-        "crop-screenshots": "node scripts/crop-screenshots.js",
-        "version": "node scripts/sync-version.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/SavageCore/xone-decky-plugin.git"
-    },
-    "keywords": [
-        "decky",
-        "plugin",
-        "steam-deck",
-        "xbox",
-        "xone",
-        "controller"
-    ],
-    "author": "SavageCore",
-    "license": "BSD-3-Clause",
-    "bugs": {
-        "url": "https://github.com/SavageCore/xone-decky-plugin/issues"
-    },
-    "homepage": "https://github.com/SavageCore/xone-decky-plugin#readme",
-    "devDependencies": {
-        "@decky/rollup": "^1.0.2",
-        "@decky/ui": "^4.11.0",
-        "@rollup/rollup-linux-x64-musl": "^4.53.3",
-        "@types/archiver": "^7.0.0",
-        "@types/react": "19.1.1",
-        "@types/react-dom": "19.1.1",
-        "@types/webpack": "^5.28.5",
-        "archiver": "^7.0.1",
-        "rollup": "^4.53.3",
-        "sharp": "^0.34.5",
-        "typescript": "^5.6.2"
-    },
-    "dependencies": {
-        "@decky/api": "^1.1.3",
-        "react-icons": "^5.3.0",
-        "tslib": "^2.7.0"
-    },
-    "pnpm": {
-        "peerDependencyRules": {
-            "ignoreMissing": [
-                "react",
-                "react-dom"
-            ]
-        }
+  "name": "xone-decky-plugin",
+  "version": "0.1.0",
+  "description": "Decky Loader plugin to manage xone and xpad-noone drivers on Steam Deck",
+  "type": "module",
+  "scripts": {
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "package": "pnpm run build && node scripts/package.js",
+    "crop-screenshots": "node scripts/crop-screenshots.js",
+    "version": "node scripts/sync-version.js",
+    "lint": "standard \"**/*.{js,ts,tsx}\"",
+    "format": "standard --fix \"**/*.{js,ts,tsx}\""
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SavageCore/xone-decky-plugin.git"
+  },
+  "keywords": [
+    "decky",
+    "plugin",
+    "steam-deck",
+    "xbox",
+    "xone",
+    "controller"
+  ],
+  "author": "SavageCore",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/SavageCore/xone-decky-plugin/issues"
+  },
+  "homepage": "https://github.com/SavageCore/xone-decky-plugin#readme",
+  "devDependencies": {
+    "@decky/rollup": "^1.0.2",
+    "@decky/ui": "^4.11.0",
+    "@rollup/rollup-linux-x64-musl": "^4.53.3",
+    "@types/archiver": "^7.0.0",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.1",
+    "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "archiver": "^7.0.1",
+    "eslint": "^8.57.0",
+    "rollup": "^4.53.3",
+    "sharp": "^0.34.5",
+    "standard": "^17.1.2",
+    "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@decky/api": "^1.1.3",
+    "react-icons": "^5.3.0",
+    "tslib": "^2.7.0"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "react",
+        "react-dom"
+      ]
     }
+  },
+  "standard": {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint/eslint-plugin"
+    ],
+    "env": [
+      "browser",
+      "node"
+    ]
+  }
 }
