--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
-    "compilerOptions": {
-        "outDir": "dist",
-        "module": "ESNext",
-        "target": "ES2022",
-        "jsx": "react",
-        "declaration": false,
-        "moduleResolution": "Bundler",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true
-    },
-    "include": [
-        "src/**/*"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+  "compilerOptions": {
+    "outDir": "dist",
+    "module": "ESNext",
+    "target": "ES2022",
+    "jsx": "react",
+    "declaration": false,
+    "moduleResolution": "Bundler",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
