--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,12 +29,25 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Install decky-cli
+        run: |
+          curl -L -o /usr/local/bin/decky "https://github.com/SteamDeckHomebrew/cli/releases/latest/download/decky-linux-x86_64"
+          chmod +x /usr/local/bin/decky
+
       - name: Create package
-        run: pnpm run package
+        run: pnpm run package:linux
+
+      - name: Prepare artifact
+        run: |
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
+          mv out/*.zip "out/Xone Driver Manager-${COMMIT_HASH}.zip"
+          mkdir -p dist-out
+          unzip out/*.zip -d dist-out/
 
       - name: Upload artifact
         uses: actions/upload-artifact@v6
         with:
-          name: xone-driver-manager
-          path: out/*.zip
+          name: Xone Driver Manager-${{ env.COMMIT_HASH }}
+          path: dist-out/
           if-no-files-found: error
