--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rollup -c",
     "watch": "rollup -c -w",
     "package": "pnpm run build && node scripts/package.js",
+    "package:linux": "decky plugin build .",
     "crop-screenshots": "node scripts/crop-screenshots.js",
     "version": "node scripts/sync-version.js",
     "lint": "ts-standard \"**/*.{js,ts,tsx}\"",
