--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           chmod +x /usr/local/bin/decky
 
       - name: Create package
-        run: pnpm run package:linux
+        run: decky plugin build .
 
       - name: Prepare artifact
         run: |
