--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Create package
         run: decky plugin build .
 
+      - name: Add version to zip name
+        run: mv out/Xone.Driver.Manager.zip out/xone-driver-manager-${{ github.ref_name }}.zip
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
