chore: Rename "nightlies" to match release format

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
           echo "COMMIT_HASH=$COMMIT_HASH" >> $GITHUB_ENV
-          mv out/*.zip "out/Xone Driver Manager-${COMMIT_HASH}.zip"
+          mv out/*.zip "out/xone-driver-manager-${COMMIT_HASH}.zip"
           mkdir -p dist-out
           unzip out/*.zip -d dist-out/
 
